# FireFly-v1

./: .gitignore  .gitmodules  eval_llm.py  pyproject.toml
dataset/: __init__.py  llm_dataset.py
model/: __init__.py  model_firefly.py
trainer/: __init__.py  train_full_sft.py  train_pretrain.py  train_util.py
