[project]
name = "firefly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.45.0,<0.46.0",
    "datasets>=2.19.1",
    "matplotlib>=3.10.8",
    "requests>=2.28.1",
    "swanlab>=0.6.7",
    "tiktoken>=0.12.0",
    "torch",
    "transformers>=5.5.4",
]


[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }
markupsafe = { index = "pypi" }
